--- a/index.html
+++ b/index.html
@@ -5,9 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Md Jahid Hossain</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <section>
+        <div class="half-width"><h1>Welcome to</h1>
+        <h1><span class="orange-color">Jahid Apu</span> World!</h1>
+        <h3>Web design with a human touch</h3>
+        <p>As a web designer, my objective is to make a positive impact on clients, co-workers, and the Internet using my skills and experience to design compelling and attractive websites. Solving code problems. Editing & Design with designing team in the company to build perfect web designs.</p>
+        <a class="link-button" target="_blank" href="https://www.facebook.com/profile.php?id=100007887674778">Hire me</a>
+    </div>
+    <div class="half-width"><img src="JahidApu.jpg" alt=""></div>
+</section>
 </body>
 </html>
