--- a/index.html
+++ b/index.html
@@ -20,5 +20,16 @@
     </div>
     <div class="half-width"><img src="JahidApu.jpg" alt=""></div>
 </section>
+<section>
+    <div class="half-width">
+        <img src="JahidApu1.jpg" alt="">
+    </div>
+    <div class="half-width">
+<h1>Dream Big</h1>
+<h2>Become a Web Developer</h2>
+<p>As a passionate Developer and long-time fan of XYZ Company, I was elated to see an opening for a Junior Web Developer role. I have experience in HTML, CSS, and JavaScript. Combined with my recent internship in front-end web development, I am confident I have the skills to help XYZ Company succeed.</p>
+<a class="link-button" target="_blank" href="https://www.facebook.com/profile.php?id=100007887674778">Download Resume</a>
+    </div>
+</section>
 </body>
 </html>
