--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section>
+    <section class="Top-Banner flexible-content">
         <div class="half-width"><h1>Welcome to</h1>
         <h1><span class="orange-color">Jahid Apu</span> World!</h1>
         <h3>Web design with a human touch</h3>
@@ -20,7 +20,7 @@
     </div>
     <div class="half-width"><img src="JahidApu.jpg" alt=""></div>
 </section>
-<section>
+<section class="Dream-Big flexible-content">
     <div class="half-width">
         <img src="JahidApu1.jpg" alt="">
     </div>
@@ -31,5 +31,23 @@
 <a class="link-button" target="_blank" href="https://www.facebook.com/profile.php?id=100007887674778">Download Resume</a>
     </div>
 </section>
+<section class="experience">
+<h1>Experiences</h1>
+<div class="flexible-content">
+    <div id="full-stack" class="experience-item">
+        <h2>Full Stack Developer</h2>
+        <h3 class="orange-color">2021-Present | Pro Level Developer</h3>
+        <p>I am the master of HTML, CSS and JavaScript. As a passionate Developer and long-time fan of XYZ Company, I was elated to see an opening for a Junior Web Developer role. I have experience in HTML, CSS, and JavaScript. Combined with my recent internship in front-end web development, I am confident I have the skills to help XYZ Company succeed.</p>
+    </div>
+    <div id="Baby-Web" class="experience-item">
+        <h2>Baby Web Developer</h2>
+        <h3 class="orange-color">2020-2021 | Programing Hero Learner</h3>
+        <p>They did not offer me a job. I made myself as a remove web developer. I made their website and showed it to them. They liked it and uploaded the content. It was really great experience to me and I enjoyed a lot.</p>
+    </div>
+</div>
+</section>
+<footer>
+    <p>Copy right issue </p>
+</footer>
 </body>
 </html>
